[package]
name = "benchmark-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binarytrees"
path = "src/binarytrees/binarytrees.rs"

[dependencies]
rayon = { path = "rust-libs/rayon" }
typed-arena = { path = "rust-libs/rust-typed-arena" }